syntax = "proto3";
package admin;
option go_package = ".;mall";



// 空响应
message EmptyRsp {
}
